# onnxruntime-inference-examples

.github/workflows/: windows_tensorrt.yml
mobile/examples/basic_usage/model/: requirements.txt
mobile/examples/image_classification/android/app/src/main/java/ai/onnxruntime/example/imageclassifier/: MainActivity.kt
mobile/examples/question_answering/android/: prepare_model.requirements.txt
plugin_execution_providers/basic/: CMakeLists.txt  gen_mul_model.py  readme.md
plugin_execution_providers/basic/android/: readme.md  settings.gradle.kts
plugin_execution_providers/basic/android/basicpluginep/: build.gradle.kts
plugin_execution_providers/basic/android/basicpluginep/src/androidTest/java/ai/onnxruntime/example/basicpluginep/: ExampleInstrumentedTest.kt
plugin_execution_providers/basic/android/basicpluginep/src/main/java/ai/onnxruntime/example/basicpluginep/: BasicPluginEpLibrary.kt
plugin_execution_providers/basic/android/basicpluginep/src/test/java/ai/onnxruntime/example/basicpluginep/: ExampleUnitTest.kt
plugin_execution_providers/basic/android/basicpluginepusage/: build.gradle.kts
plugin_execution_providers/basic/android/basicpluginepusage/src/androidTest/java/ai/onnxruntime/example/basicpluginepusage/: ExampleInstrumentedTest.kt
plugin_execution_providers/basic/android/basicpluginepusage/src/main/: AndroidManifest.xml
plugin_execution_providers/basic/android/basicpluginepusage/src/main/java/ai/onnxruntime/example/basicpluginepusage/: MainActivity.kt
plugin_execution_providers/basic/android/basicpluginepusage/src/main/java/ai/onnxruntime/example/basicpluginepusage/ui/theme/: Color.kt  Theme.kt  Type.kt
plugin_execution_providers/basic/android/basicpluginepusage/src/main/res/values/: strings.xml  themes.xml
plugin_execution_providers/basic/android/basicpluginepusage/src/test/java/ai/onnxruntime/example/basicpluginepusage/: ExampleUnitTest.kt
plugin_execution_providers/basic/android/gradle/wrapper/: gradle-wrapper.properties
plugin_execution_providers/basic/csharp/: .gitignore  BasicPluginEpExample.sln  readme.md  setup.bat
plugin_execution_providers/basic/csharp/Contoso.ML.OnnxRuntime.EP.Basic/: BasicEp.cs  Contoso.ML.OnnxRuntime.EP.Basic.csproj  readme.md
plugin_execution_providers/basic/csharp/SampleApp/: Program.cs  SampleApp.csproj
plugin_execution_providers/basic/python/: .gitignore  readme.md  setup.py
plugin_execution_providers/basic/python/example_usage/: example_usage.py
plugin_execution_providers/basic/python/onnxruntime_ep_basic/: __init__.py
plugin_execution_providers/basic/src/: ep.cc  ep.h  ep_factory.cc  ep_factory.h  ep_lib.def  ep_lib_entry.cc
plugin_execution_providers/common/: readme.md
plugin_execution_providers/common/src/: plugin_ep_utils.h
plugin_execution_providers/tensorrt/: CMakeLists.txt  README.md  onnx_ctx_model_helper.cc  setup.py
plugin_execution_providers/tensorrt/example/: plugin_ep_inference.py
plugin_execution_providers/tensorrt/plugin_trt_ep/: __init__.py
plugin_execution_providers/tensorrt/python_package/plugin_trt_ep/: __init__.py
plugin_execution_providers/tensorrt/src/: tensorrt_execution_provider.cc  tensorrt_execution_provider.h  tensorrt_execution_provider_data_transfer.cc  tensorrt_execution_provider_kernel_registration.cc  tensorrt_execution_provider_kernel_registration.h  tensorrt_provider_factory.cc
plugin_execution_providers/tensorrt/src/kernels/: memcpy.cc  memcpy.h  utils.h
plugin_execution_providers/test/tensorrt/: CMakeLists.txt  build_and_test_trt_ep.ps1  helper.cc  tensorrt_basic_test.cc  test_trt_ep_utils.cc  test_trt_ep_utils.h
python/OpenVINO_EP/tiny_yolo_v2_object_detection/: requirements.txt
